# chipsage

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/agents/: git-clerk.md
.github/workflows/: ci.yml
data/pdf/: SOURCES.md
data/svd/: RP2040.svd  SOURCES.md
scripts/: fetch_pdfs.py  fetch_svds.py
src/chipsage/: __init__.py  bits.py  build_index.py  db.py  docs_index.py  loader.py  models.py  pdf.py  query.py  schema.py  server.py  svd.py  validation.py
tests/: conftest.py  test_bits.py  test_docs_index.py  test_loader.py  test_pdf.py  test_query.py  test_server.py  test_validation.py
